--- a/style.css
+++ b/style.css
@@ -85,8 +85,8 @@ h2
 
 .errorStyle
 {
-	color: #b22;
-	font: 12px;
+	font-size: 4px !important;
+	color: #166 !important;
 }
 
 @media(max-width: 575px)
